vendor/fixed-macro/tests/compile-fail/invalid-type-04.rs
fn main() {
    fixed_macro::fixed!(0123: I129F16);
}
