vendor/fixed-macro/tests/compile-fail/invalid-type-04.stderr
error: invalid fixed type: invalid number of integer bits
 --> $DIR/invalid-type-04.rs:2:31
  |
2 |     fixed_macro::fixed!(0123: I129F16);
  |                               ^^^^^^^
